Opened 8 years ago
Closed 8 years ago
#12901 closed bug (fixed)
[launch_daemon] Does not detect that it is already running and starts again
Reported by: | waddlesplash | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Servers/launch_daemon | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
- Go to /system/servers
- Double-click launch_daemon
- It appears another app_server is started on top of the existing one, which causes all sorts of weird glitches and 100% CPU usage on all cores.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev51073.