launch_daemon: Don't allow restarting.

* Check if the port already exists on startup. This fixes #12901.